<resources>
    <string name="app_name">SafeRoute</string>
    <string name="txt_title_Inicio">Rota Segura App</string>
    <string name="txt_input_Login" />
    <string name="txt_input_Password" />
    <string name="but_Login">Acessar</string>
    <string name="but_AdmUsers">Administrar Usuários</string>
    <string name="but_CreateUsers">Novo Usuário</string>
    <string name="but_AdminRotas">Administrar Rotas</string>
    <string name="but_AdminUsers">Administrar Usuários</string>
    <string name="but_AdminRoutes">Administrar Rotas</string>
    <string name="but_CreateRoutes">Nova Rota</string>
    <string name="txt_title_Menu">Menu Principal</string>
    <string name="but_senha_1">1</string>
    <string name="but_senha_2">2</string>
    <string name="but_senha_3">3</string>
    <string name="but_senha_4">4</string>
    <string name="but_senha_5">5</string>
    <string name="but_senha_6">6</string>
    <string name="but_senha_7">7</string>
    <string name="but_senha_8">8</string>
    <string name="but_senha_9">9</string>
    <string name="text_alert_fora_rota">Veículo Fora da Rota!</string>
    <string name="txt_input_senha" />
    <string name="but_ICasa">Interface Casa</string>
    <string name="but_ICarro">Interface Carro</string>
    <string name="but_IMonitoramento">Interface Monitoramento</string>
    <string name="txt_title_ICasa">Menu Casa</string>
    <string name="but_VisualRotas">Consultar / Escolher Rota</string>
    <string name="txt_title_ICarro">Menu Carro</string>
    <string name="but_IMonitor">Monitoramento</string>
    <string name="but_senha_confirmar">Confirmar</string>
    <string name="text_alert_fora_rota2">Senha de Segurança</string>


    <string-array name="combo_rotas_str">
        <item> " "</item>
        <item> "Jacaraipe x Vitória"</item>
        <item> "Laranjeiras x Serra Sede"</item>
        <item> "Cariaciaca x Vila Velha"</item>
        <item> "Vitória x Carapina"</item>
    </string-array>


    <string-array name="SystemMessageDelete">
        <item> "Você deseja excluir o usuário "</item>
        <item> "Você deseja excluir o produto "</item>
        <item> "Você deseja excluir o cliente "</item>
    </string-array>


    <string name="but_senha_erase">-</string>
    <string name="monitor_IoT">Monitoramento IoT</string>
    <string name="_teste_fora_da_rota">Monitor Popup Senha</string>
    <string name="titulo_menu_monitormanento">Ferramentas Monitoramento</string>
    <string name="txt_title_AU_AdmUsuario">Administração de Usuário</string>
    <string name="txt_subtitle_AU_UsuarioSelecionado">Usuário Selecionado</string>
    <string name="txt_input_AU_UsuarioSelecionado">Selecione Usuário</string>
    <string name="but_AU_Edit">Editar</string>
    <string name="but_AU_Delete">Deletar</string>
    <string name="txt_subtitle_AU_ListaUsuarios">Lista de Usuários</string>
    <string name="but_AU_Criar">Criar</string>
    <string name="txt_LUL_title_IDUsuario">ID</string>
    <string name="txt_LUL_title_NomeUsuario">Nome</string>
    <string name="txt_LUL_title_Usuario">Login</string>
    <string name="txt_title_CE_Usuario">Cadastro de Usuário</string>
    <string name="txt_NomeUsuario">Nome:</string>
    <string name="txt_Login">Login:</string>
    <string name="txt_PasswordApp">Senha App:</string>
    <string name="txt_PasswordRota">Senha Rota:</string>
    <string name="txt_PasswordEmergencia">Senha Emergência:</string>
    <string name="but_Cadastrar">Cadastrar</string>
    <string name="txt_input_NomeUsuario" />
    <string name="txt_input_LoginApp" />
    <string name="txt_input_PassAppUsuario" />
    <string name="txt_input_PassRotaUsuario" />
    <string name="txt_input_PassEmergUsuario" />
    <string name="txt_LUL_UserID" />
    <string name="monitor_parar_IoT">Parar Monitoramento IoT</string>

</resources>
