<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioCE">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_CE_Usuario">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_NomeUsuario"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_NomeUsuario"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_NomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nome Completo"
                android:inputType="textPersonName"
                android:text="@string/txt_input_NomeUsuario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_Login"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_LoginApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Login do Usuário"
                android:inputType="textPersonName"
                android:text="@string/txt_input_LoginApp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_PasswordApp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_PasswordApp"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_PassAppUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Senha Login Aplicativo"
                android:inputType="textPersonName"
                android:text="@string/txt_input_PassAppUsuario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_PasswordRota"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_PasswordRota"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_PassRotaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Senha de Rota"
                android:inputType="textPersonName"
                android:text="@string/txt_input_PassRotaUsuario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_PasswordEmergencia"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_PasswordEmergencia"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_input_PassEmergUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Senha de Emergência"
                android:inputType="textPersonName"
                android:text="@string/txt_input_PassEmergUsuario" />

        </LinearLayout>

        <Button
            android:id="@+id/but_Cadastrar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btc_button"
            android:onClick="OnClickbuttonCadastrar"
            android:text="@string/but_Cadastrar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_CE_Usuario"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/txt_title_CE_Usuario"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>