<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministracaoUsuario">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_title_AU_AdmUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0"
        android:text="@string/txt_title_AU_AdmUsuario"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_AU_AdmUsuario">

        <TextView
            android:id="@+id/txt_subtitle_AU_UsuarioSelecionado"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_AU_UsuarioSelecionado"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_input_AU_UsuarioSelecionado"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Selecione um Usuário"
            android:text="@string/txt_input_AU_UsuarioSelecionado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_AU_Criar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/blue_btc_button"
                android:onClick="OnClickbuttonCadastrarUsuario"
                android:text="@string/but_AU_Criar"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/but_AU_Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/blue_btc_button"
                android:onClick="OnClickbuttonEditarUsuario"
                android:text="@string/but_AU_Edit"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <Button
                android:id="@+id/but_AU_Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/blue_btc_button"
                android:onClick="AlertaDelete"
                android:text="@string/but_AU_Delete"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_subtitle_AU_ListaUsuarios"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_subtitle_AU_ListaUsuarios"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_LUL_title_IDUsuario"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_LUL_title_IDUsuario"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txt_LUL_title_NomeUsuario"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_LUL_title_NomeUsuario"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txt_LUL_title_Usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_LUL_title_Usuario"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <ListView
                    android:id="@+id/list_Users"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>